tests/ui/key_fabrication.stderr
error[E0624]: associated function `from_parts` is private
 --> tests/ui/key_fabrication.rs:5:28
  |
5 |     let _ = SlabKey::<()>::from_parts(parts);
  |                            ^^^^^^^^^^ private associated function
  |
 ::: src/collections/slab/key.rs
  |
  |     pub(crate) const fn from_parts(parts: SlabKeyParts<MAX>) -> Self {
  |     ---------------------------------------------------------------- private associated function defined here
